# rcmcp

./: .gitignore  .mcp.json  CLAUDE_DESKTOP_CONFIG.md  Dockerfile  EVALUATION_README.md  IMPLEMENTATION_SUMMARY.md  LICENSE  QUICK_START.md  README.md  START_HERE.md  WARP.md  docker-catalog.yaml  evaluations.xml  mcp_review_findings.md  package.json  pyproject.toml  setup.ps1  setup.sh  smithery.json  smithery.yaml  test_server.py  uab_docs_server.py  uab_docs_server_final.py  uab_docs_server_http.py  uab_docs_server_smithery.py
Bak/: ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  FINAL_SOLUTION.md  INDEX.md  INSTALLATION_GUIDE.md  SETUP_CHECKLIST.md
cloudflare/: README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare/src/: index.ts
files/: COMPLETE_DEPLOYMENT_CHECKLIST.md  QUICK_FIX.md  SMITHERY_FIX.md  SMITHERY_JSON_GUIDE.md
files (1)/: CORRECTED_SOLUTION.md
