[project]
name = "uab-rc-docs-mcp-server"
version = "1.0.0"
description = "MCP server for UAB Research Computing documentation"
authors = [
    {name = "UAB Research Computing"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uab_docs_server.py"]

[tool.uv]
dev-dependencies = []
